--- a/style.css
+++ b/style.css
@@ -12,3 +12,12 @@ canvas {
 	margin: 0;
 	background-color: black;
 }
+
+#bottomPanel {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 150px;
+	background-color: white;
+}
