--- a/style.css
+++ b/style.css
@@ -18,6 +18,21 @@ canvas {
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 150px;
 	background-color: white;
+}
+
+#time-slide {
+	background-color: #DDD;
+	height: 20px;
+	position: relative;
+}
+
+#slider {
+	background-color: #333;
+	height: 100%;
+	width: 1%;
+}
+
+.drag {
+	position: relative;
 }
